--- a/itronDay/Base.lproj/Main.storyboard
+++ b/itronDay/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="20037" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="UwD-9j-VDh">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="20037" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="bHl-Sw-92e">
     <device id="retina6_0" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
@@ -158,7 +158,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" hasAttributedTitle="YES" translatesAutoresizingMaskIntoConstraints="NO" id="mLt-Qu-mSl">
-                                <rect key="frame" x="79.666666666666686" y="604" width="231" height="75"/>
+                                <rect key="frame" x="79.666666666666686" y="645" width="231" height="75"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="75" id="NQN-jq-QNc"/>
                                     <constraint firstAttribute="width" constant="231" id="oNr-eE-ziX"/>
@@ -201,13 +201,39 @@
                                     <segue destination="Kwg-OQ-M3S" kind="presentation" modalPresentationStyle="fullScreen" id="Ukv-Gy-nbJ"/>
                                 </connections>
                             </button>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="characterWrap" hasAttributedTitle="YES" translatesAutoresizingMaskIntoConstraints="NO" id="hLY-8Y-FCc">
+                                <rect key="frame" x="199" y="454" width="175" height="120"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="175" id="Jih-fn-ie8"/>
+                                    <constraint firstAttribute="height" constant="120" id="PpK-Ho-o1Z"/>
+                                </constraints>
+                                <color key="tintColor" red="0.094117648900000003" green="0.094117648900000003" blue="0.34901961679999999" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                                <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
+                                <state key="normal" backgroundImage="button2">
+                                    <attributedString key="attributedTitle">
+                                        <fragment>
+                                            <string key="content">Получить
+логотип</string>
+                                            <attributes>
+                                                <font key="NSFont" size="24" name="ComicSansMS"/>
+                                                <paragraphStyle key="NSParagraphStyle" alignment="center" lineBreakMode="wordWrapping" baseWritingDirection="natural" tighteningFactorForTruncation="0.0"/>
+                                            </attributes>
+                                        </fragment>
+                                    </attributedString>
+                                </state>
+                                <connections>
+                                    <action selector="logoLink:" destination="Div-6W-QBQ" eventType="touchUpInside" id="gvq-Hv-mnP"/>
+                                </connections>
+                            </button>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="YLB-d5-9qV"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <constraints>
-                            <constraint firstItem="8AP-fE-h1a" firstAttribute="top" secondItem="mLt-Qu-mSl" secondAttribute="bottom" constant="61" id="3xI-MG-Yzc"/>
+                            <constraint firstItem="8AP-fE-h1a" firstAttribute="top" secondItem="mLt-Qu-mSl" secondAttribute="bottom" constant="20" id="3xI-MG-Yzc"/>
                             <constraint firstItem="mLt-Qu-mSl" firstAttribute="centerX" secondItem="xq2-8M-myY" secondAttribute="centerX" id="8Gf-Vh-mQx"/>
+                            <constraint firstItem="mLt-Qu-mSl" firstAttribute="top" secondItem="hLY-8Y-FCc" secondAttribute="bottom" constant="71" id="BAT-yF-Oly"/>
                             <constraint firstItem="8AP-fE-h1a" firstAttribute="bottom" secondItem="YLB-d5-9qV" secondAttribute="bottom" id="K2v-tn-gqQ"/>
+                            <constraint firstItem="YLB-d5-9qV" firstAttribute="trailing" secondItem="hLY-8Y-FCc" secondAttribute="trailing" constant="16" id="sv7-P5-vmV"/>
                             <constraint firstItem="8AP-fE-h1a" firstAttribute="centerX" secondItem="xq2-8M-myY" secondAttribute="centerX" id="wHb-1m-U1d"/>
                         </constraints>
                     </view>
@@ -522,7 +548,7 @@
         </scene>
     </scenes>
     <inferredMetricsTieBreakers>
-        <segue reference="026-Tg-4fe"/>
+        <segue reference="Ukv-Gy-nbJ"/>
     </inferredMetricsTieBreakers>
     <resources>
         <image name="aim" width="310" height="310"/>
